Convert ScrollContainer css to css modules and stop using silly props to handle spacing between footer and content

--- a/src/component/helpCenter/HelpCenterDesktop.sass
+++ b/src/component/helpCenter/HelpCenterDesktop.sass
@@ -7,6 +7,10 @@
   composes: u-posRelative from '../../styles/utils.scss';
 }
 
-.logoHidden {
-  composes: u-marginVM from '../../styles/utils.scss';
+.footer {
+  composes: u-paddingVS from '../../styles/utils.scss';
+}
+
+.footerLogo {
+  composes: u-paddingVL from '../../styles/utils.scss';
 }
