--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -246,6 +246,11 @@ $Base-posOffset: $med + 1;
   padding-bottom: 0 !important;
 }
 
+.u-paddingVS {
+  padding-top: $spacing-sml !important;
+  padding-bottom: $spacing-sml !important;
+}
+
 .u-paddingVM {
   padding-top: $spacing-med !important;
   padding-bottom: $spacing-med !important;
